# robotic_arm

install/: local_setup.sh  setup.sh
install/manipulator_bringup/share/manipulator_bringup/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/manipulator_bringup/share/manipulator_bringup/launch/: simulatated_robot.launch.py
install/simple_task/share/simple_task/: package.bash  (+5 more)
log/: latest_build
src/install/: local_setup.sh  setup.sh
src/log/: latest_build
src/manipulator_bringup/: CMakeLists.txt
src/manipulator_bringup/launch/: simulated_robot.launch.py
src/manipulator_controller/: setup.cfg  setup.py
src/manipulator_controller/launch/: bringup.launch.py
src/manipulator_description/: package.xml  setup.cfg  setup.py
src/manipulator_description/launch/: gazebo.launch.py
src/manipulator_description/simple_examples/: simple_parameter.py
src/manipulator_description/urdf/: manipulator.urdf.xacro  manipulator_ros2_control.xacro
src/manipulator_moveit/: CMakeLists.txt
src/manipulator_moveit/config/: initial_position.yaml  moveit_controllers.yaml
src/manipulator_moveit/launch/: moveit.launch.py
src/manipulator_msgs/: CMakeLists.txt
src/manipulator_remote/: CMakeLists.txt
src/manipulator_remote/launch/: remote_interface.launch.py
src/manipulator_remote/manipulator_remote/: task_server.py
src/manipulator_utils/: package.xml  setup.cfg  setup.py
src/manipulator_utils/manipulator_utils/: angle_conversion.py
src/simple_task/: setup.cfg  setup.py
src/simple_task/simple_task/: simple_moveit_interface.py
(+124 files in other folders)
